main_eks.tf


resource "aws_iam_role" "eks-iam-role" {
 name = "dolufinalproject-eks-iam-role"

 path = "/"

 assume_role_policy = <<EOF
{
 "Version": "2012-10-17",
 "Statement": [
  {
   "Effect": "Allow",
   "Principal": {
    "Service": "eks.amazonaws.com"
   },
   "Action": "sts:AssumeRole"
  }
 ]
}
EOF

}

resource "aws_iam_role_policy_attachment" "AmazonEKSClusterPolicy" {
 policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
 role    = aws_iam_role.eks-iam-role.name
}
resource "aws_iam_role_policy_attachment" "AmazonEC2ContainerRegistryReadOnly-EKS" {
 policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
 role    = aws_iam_role.eks-iam-role.name
}

resource "aws_eks_cluster" "finalproject-eks" {
 name = "finalproject-cluster"
 role_arn = aws_iam_role.eks-iam-role.arn

 vpc_config {
  endpoint_private_access = true
  endpoint_public_access = true 
  subnet_ids = [
    aws_subnet.private_subnet.id, 
    aws_subnet.private_subnet2.id,
    aws_subnet.public_subnet.id,
    aws_subnet.public_subnet2.id
    ]
 }

 depends_on = [
  aws_iam_role.eks-iam-role
 ]
}

resource "aws_iam_role" "finalprojectworkernodes" {
  name = "eks-node-group-dolu"
 
  assume_role_policy = jsonencode({
   Statement = [{
    Action = "sts:AssumeRole"
    Effect = "Allow"
    Principal = {
     Service = "ec2.amazonaws.com"
    }
   }]
   Version = "2012-10-17"
  })
 }
 
 resource "aws_iam_role_policy_attachment" "AmazonEKSWorkerNodePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
  role    = aws_iam_role.finalprojectworkernodes.name
 }
 
 resource "aws_iam_role_policy_attachment" "AmazonEKS_CNI_Policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
  role    = aws_iam_role.finalprojectworkernodes.name
 }
 
 resource "aws_iam_role_policy_attachment" "EC2InstanceProfileForImageBuilderECRContainerBuilds" {
  policy_arn = "arn:aws:iam::aws:policy/EC2InstanceProfileForImageBuilderECRContainerBuilds"
  role    = aws_iam_role.finalprojectworkernodes.name
 }
 
 resource "aws_iam_role_policy_attachment" "AmazonEC2ContainerRegistryReadOnly" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
  role    = aws_iam_role.finalprojectworkernodes.name
 }

 resource "aws_eks_node_group" "final-project-worker-node-group" {
  cluster_name  = aws_eks_cluster.finalproject-eks.name
  node_group_name = "finalproject-workernodes-private"
  node_role_arn  = aws_iam_role.finalprojectworkernodes.arn
  subnet_ids   = [aws_subnet.private_subnet.id, aws_subnet.private_subnet2.id]
  instance_types = ["t3.medium"]


  scaling_config {
   desired_size = 2
   max_size   = 2
   min_size   = 2
  }
 
  depends_on = [
   aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy,
   aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy,
   aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly,
  ]
 }


resource "aws_launch_template" "eks-with-disks" {
 name = "eks-with-disks"
key_name = "local-provisioner"

block_device_mappings {
 device_name = "/dev/xvdb"

ebs {
  volume_size = 80
    volume_type = "gp2"
   }
  }
 }
